namespace AirTrafficMonitoring
{
    public class Airspace
    {
        
    }
}